bk_ida/gccida/g0/combine_givs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7927:1: error: use of undeclared identifier 'induction_1'
induction_1 *g2; // [rsp+30h] [rbp-60h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7927:14: error: use of undeclared identifier 'g2'
induction_1 *g2; // [rsp+30h] [rbp-60h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7931:1: error: use of undeclared identifier 'induction_1'
induction_1 **giv_array; // [rsp+50h] [rbp-40h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7931:15: error: use of undeclared identifier 'giv_array'
induction_1 **giv_array; // [rsp+50h] [rbp-40h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7940:1: error: use of undeclared identifier 'induction_1'
induction_1 *g1; // [rsp+78h] [rbp-18h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7940:14: error: use of undeclared identifier 'g1'
induction_1 *g1; // [rsp+78h] [rbp-18h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7946:7: error: use of undeclared identifier 'g1'
for ( g1 = bl_0->giv; g1; g1 = g1->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7946:23: error: use of undeclared identifier 'g1'
for ( g1 = bl_0->giv; g1; g1 = g1->next_iv ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7946:27: error: use of undeclared identifier 'g1'
for ( g1 = bl_0->giv; g1; g1 = g1->next_iv ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7946:32: error: use of undeclared identifier 'g1'
for ( g1 = bl_0->giv; g1; g1 = g1->next_iv ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7948:21: error: use of undeclared identifier 'g1'
if ( ( *( ( _BYTE *)g1 + 100) & 4) == 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7952:1: error: use of undeclared identifier 'giv_array'
giv_array = ( induction_1 **)&bl_0a; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7952:29: error: expected expression
giv_array = ( induction_1 **)&bl_0a; 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7952:15: error: use of undeclared identifier 'induction_1'
giv_array = ( induction_1 **)&bl_0a; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7954:7: error: use of undeclared identifier 'g1'
for ( g1 = bl_0a->giv; g1; g1 = g1->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7954:24: error: use of undeclared identifier 'g1'
for ( g1 = bl_0a->giv; g1; g1 = g1->next_iv ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7954:28: error: use of undeclared identifier 'g1'
for ( g1 = bl_0a->giv; g1; g1 = g1->next_iv ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7954:33: error: use of undeclared identifier 'g1'
for ( g1 = bl_0a->giv; g1; g1 = g1->next_iv ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/loop.c:7956:21: error: use of undeclared identifier 'g1'
if ( ( *( ( _BYTE *)g1 + 100) & 4) == 0 ) 
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_givs/src/obj/loop.o] Error 1
